kubernetes/apps/media/radarr/app.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  namespace: media
spec:
  serviceName: radarr
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9794"
        prometheus.io/path: "/metrics"
    spec:
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: exportarr
          image: ghcr.io/onedr0p/exportarr:v2.0.0
          imagePullPolicy: IfNotPresent
          args: ["radarr"]
          ports:
            - containerPort: 9794
              name: metrics
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 100Mi
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 7878
              name: http
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /ping
              port: http
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              memory: 256Mi
              cpu: "100m"
            limits:
              memory: 256Mi
              cpu: "1000m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: media
          persistentVolumeClaim:
            claimName: media-library
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.71.165
  ports:
    - port: 7878
      targetPort: 7878
      name: http
  selector:
    app: radarr
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: radarr
  namespace: media
spec:
  hosts:
    - "radarr.bavsworld.com"
  gateways:
    - istio-system/default-gateway
  http:
    - route:
        - destination:
            host: radarr
            port:
              number: 7878
